fix headline word spacing

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -9,7 +9,7 @@ h1, h2, h3, h4, h5 {
   font-family: $headline-font;
   font-weight: 700;
   color: color("grey", "lighten-3");
-  word-spacing: -1rem;
+  word-spacing: -0.3em;
 }
 
 strong {
